--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ABOUT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY NETWORKING</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">COURSES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY COCHIN</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY NETWORK ACADEMY</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ABOUT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY NETWORKING</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">COURSES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY COCHIN</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">WHY NETWORK ACADEMY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">SOLUTIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CAREERS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">DOWNLOADS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">TESTIMONIALS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">FAQ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-1">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider-1">
     <div>
         <div>
             <div>
@@ -134,7 +134,7 @@ Fax: +1 (0) 000 0000 002</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0pCQOtz9vL0aw1Om+vaEuI/yGCRZhA225zF/N8ey4KNdGwID/rsWQE+dXVUrTZOo4GME9HGtT4t4amPOlYWIpiHNA9pVsjEzJEYgdAHMpXB4pBrgPzIgGgaz4YE6rFVc" data-form-email="true">
+                    <input type="hidden" value="RVdKNrZmCGjFhVxuhR/Is4IVXrI1vY/iqhYUz5b/Z6mAcAbyI4rVSCpXSR0KV3ZCWRIMpgZs5rHkidh/kk6cdkP/kAz8GrhS3nsb4UyAaFTxa22zUPaHYAwVU6Wm1ySQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4-email">Email<span class="form-asterisk">*</span></label>
