--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-q" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-q" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -104,7 +104,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="YzYVVWccNtYGZH/AgZKX+XeKbjrYbYcg4Yjgcue603o2nOfFoyvjgJ5IFAb6XVgBtFLP6tUBLNOoRDzGNI/l/rQ5PGCdIxb/R3BqraLL4xEqQlX/DDSNX3oecby+N0lk" data-form-email="true">
+                    <input type="hidden" value="gAT+5WcnJcMVU0nLDC6f0dUoKon1qzFpe+BnUOHLb9nNVGnXaduL3qSYA+Ky9vdQnArXRODbuU3N3dZXobi1igzFqgJ8jS85RG5omfvBvgKfEsBbGJP0zGApxWIQjClN" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-k-email">Email<span class="form-asterisk">*</span></label>
