--- a/courses.html
+++ b/courses.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-66" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-66" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -149,7 +149,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="CaJPGgBBUR4eDCY4Z4F9+UedHZ3LBFB/Oq6+C/bO7pUn09LgElKjILgZ+44hUMAQUWyU2tpE3R6UVaouPXqxFQYKLz+QNhSwwK3Zr06xDfVWiGuWUhJFqHQ3aOnoRg/W" data-form-email="true">
+                    <input type="hidden" value="NHT2XyNV/TgFABC74LQMdVMejsxukF91LdK8Aq3HxdE8xe24CmXOETP/DLTSoEC971cPuNsZhJ4nlHpgMrMaPDvA24jAJ7eDEFFxWbnpSFdeqUOc97Jb+19PLLwA41gF" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-a-email">Email<span class="form-asterisk">*</span></label>
