--- a/tuts_download.html
+++ b/tuts_download.html
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section-md-padding mbr-parallax-background mbr-after-navbar" id="social-buttons2-5x" style="background-image: url(assets/images/landscape3.jpg); padding-top: 90px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-section-md-padding mbr-parallax-background mbr-after-navbar" id="social-buttons2-5x" style="background-image: url(assets/images/landscape3.jpg); padding-top: 90px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -145,7 +145,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="irufJyKoi0vwTkKBUXO6hUd9BxY7Ey0/Zw9b0p31miLtCJ4ANnoUW5AXu1y57S0CwFbAZ2QbvzHN5Z0ZzUqMxJwqeMgCbdoSOuCkt0Ecytpqqh6ic5UcyvHd4pYjvc14" data-form-email="true">
+                    <input type="hidden" value="JMCzrEXg07e61zhNuwPNQQHLf1YC98vzGogSKAPkT1Bp196HwpAGXwwsh2IbRBMRMt6+lBT2yFFJO/Rjm29ZQSzKT3BtNidNOx2hwm9YvM0rub1eiM+FY1ZzAqZ+tukM" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-5v-email">Email<span class="form-asterisk">*</span></label>
