create github pages

--- a/Why_Cochin.html
+++ b/Why_Cochin.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1q" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1q" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5oLDyxmvaxsTdD5EsVTgjz6abl2K7I03MTe/KVeZZOS3uzLbu1VpYWO2Kn8KT9lf7IhCBftfzhLl0oBPtflPGxvLDBnmkYRKjiMoH+NELvVNdBEbBGBilv81bKF4s23s" data-form-email="true">
+                    <input type="hidden" value="X+SO0Zg0LjZGEIk0LwzZtCxe4B32fcNSomc2wFoZB2ojTiX2XpNrFqfH/CLqq29ctSbUSsuBrw8aXaZsBnv/NGOhzBqLdoS3ad70xNQeALz1kdHTZ7rqhJC8t5zVE9Hl" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-y-email">Email<span class="form-asterisk">*</span></label>
