--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-q" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-q" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -104,7 +104,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="gAT+5WcnJcMVU0nLDC6f0dUoKon1qzFpe+BnUOHLb9nNVGnXaduL3qSYA+Ky9vdQnArXRODbuU3N3dZXobi1igzFqgJ8jS85RG5omfvBvgKfEsBbGJP0zGApxWIQjClN" data-form-email="true">
+                    <input type="hidden" value="rYcSSPIPdbi7QCnlNvAg6hS/z5a+IuraI3u9+j4R6osr+6iM3XgaZvoRKA4ZodxKU3UUS2OAFiMS0KpWI9nkel3IoDAG6l9sJrZjziCX8YOdX0/x2hsN4ldEj5/Vpp8I" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-k-email">Email<span class="form-asterisk">*</span></label>
