--- a/ccna_security.html
+++ b/ccna_security.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-2g">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2z" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2z" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Z3aXn5if1HLZdss6bilVSVKD1ULe5glUA/jLuo7uvdfi6Ytd7gwKj7KqLMTMOz+45qLpVoD559cceFyW5PvYoBtZAhKdjAwBs0ePwzkNiaOO0odU9zLF/h6spVAuCZxF" data-form-email="true">
+                    <input type="hidden" value="J5H9ceNa1Z0YWfrqTUsQOPWUpTxdCp23uDVQQ0uId/AtK3L/M2W45KGzJlmcnvIsdSXaJgv/pnIRMnXmunMBTaXtXqTuCodFvvgVWb1Tp9nCBXGR4JcEnVT3LTYlYOrf" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2h-email">Email<span class="form-asterisk">*</span></label>
