--- a/ccnp_routing_and_switchin.html
+++ b/ccnp_routing_and_switchin.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-3b">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3e" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3e" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -159,7 +159,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="1M5+6pNmk6DTrJX7uANYjlXHVCqZ36IsBQNUY2yY6xOhLOlPkfiR14ZE2hMoZp3ztNjgZRX/pa99UGTFxBnSgV/FsywQeXV+dql403K3v+d+em9P0ZxM2Umx/sgwzZCZ" data-form-email="true">
+                    <input type="hidden" value="iBiuTqT+N5Ge5yPTO2iklgXP5tVD6efbpLtMt97boHvri+/pRoUqTwnuim4ozV06Eh3TekvPiQAEg8TtH5t0AkCTEurzHOrxw1LN2lVgQv0el2fShetkPYF+A1oe+Kwg" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-3c-email">Email<span class="form-asterisk">*</span></label>
