--- a/cisco_courses.html
+++ b/cisco_courses.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-25">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-28" style="background-color: rgb(48, 48, 48); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-28" style="background-color: rgb(48, 48, 48); padding-top: 160px; padding-bottom: 40px;">
 
     
 
@@ -159,7 +159,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="wFYU9iy8jDrSEGas4csIpLFferyw3VBI9Ks8pg88EL1ViPIk9pEQAZV2vHeXtZNAFlKfCyWP+DIdBdA7dEdNS4DvA/BspgY9GlQ5xaq2XyPCibK9G1kQDksQLJsGVoRv" data-form-email="true">
+                    <input type="hidden" value="kTznp3rNHP8bzptRNxN1pQHRjdpqD7gY/1Hkzn6C9aV6qLF9C7Lyqf0m0EWjHOD0ayZ07pxQWAk3SwxdJ6qyxm6ZcvTtaMCEp/dETUimK5UJ4bpwBQ0qvcLvumcMrye7" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-26-email">Email<span class="form-asterisk">*</span></label>
