--- a/mcse.html
+++ b/mcse.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-51">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-54" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-54" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LpF102vQzLz9WSYce09Q+fM7vamQvz3X+Xu0JjO9ji6H0cMLjQBPI4Nclx1Ydh6Kp5V8gk56DuVhbcWzUm36+f5nEMxQvcV/np4XPDIe3adG/zeAB7RZ/wIyfeh5vAWj" data-form-email="true">
+                    <input type="hidden" value="XOpFYCnt2YFsU5a8qCMg9dEvl4+Yw5tSyQS46hatltjvstjCgyt/ucNL8rCSghSrauGdyuhukRPiIc3Coz7CPi6raCA+kjCl83IgJ0sRjyrkoeEkFZBAU8Plc76bBhvQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-52-email">Email<span class="form-asterisk">*</span></label>
