--- a/solutions.html
+++ b/solutions.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-67" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-67" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -120,7 +120,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="QGO67Qj15NVO+25s2cpamKQK1exLtLHC0sQpxvaWCh9PCxi8dEBtyo7WJyMdJRcZ/EhdsSpzJOMKwAq4iS6lK/KNwjmTS1F/YX/lPc6B+Ze+4sMloBvKyNAT/yecGE9K" data-form-email="true">
+                    <input type="hidden" value="49c4YuLrLJX50C4IN5Mk9CDADJxLQrhe+FxZcyA2nxK1XyFZnhixZO2qxXU681eOAMaQU2YMw0kS3Jo1KBD1TePb+SeCauVRlvFWvq+JevVy6/epY2Yh1rZDPH9elmSU" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-16-email">Email<span class="form-asterisk">*</span></label>
