--- a/tcine.html
+++ b/tcine.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-7o">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-7p" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-7p" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="UOjJ3Uk4AdY7LwIL9XrIac4NzVt935736DwMWKDX56xMql58VHc+oj2inXUgtEaPKw+MKEFb7M9WenyvjKhyUbLuX9glzFFLf3alp6ArR7X/evFO48ncaJfAVAEgkh8y" data-form-email="true">
+                    <input type="hidden" value="bHSE/Y1JLqbgfnPr7wmAivi6wJT26O2wQkU7QButT7AphweBkJ2uosl8mjQJHHdNLcqtlezCwD8SdhkXcs8gC+B3fF/eS8eO2zicqNUYD2dPkoeAMkv3YV43DyU7dtpl" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-7u-email">Email<span class="form-asterisk">*</span></label>
