--- a/testimonials.html
+++ b/testimonials.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="content8-1w" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="content8-1w" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -135,7 +135,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="qlI6hoTyVVjf7wUUDcCWPOdd7Na4drFxsCSETmfUsm87LDyou+3nEF4QSTA9dbegTFSiE+Ro+s9AL6cvIU7MAwtM1BCyP/sUJCsjxctlKpFv4pzJnoPm5Kyw05dbncMI" data-form-email="true">
+                    <input type="hidden" value="6uykvuKG5NqBPyRmsT3KMfzx9MDEb5IbBn5H3qhQEYTCJNxuD7Dz7h7L9/H5DJ37HmxnM8qZjKfK5XV85npNA9bEy31zzOVvC2eaHEsF0ho5qsa7fc+Svv3NYgRuImjp" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-16-email">Email<span class="form-asterisk">*</span></label>
