--- a/why_networkacademy.html
+++ b/why_networkacademy.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1t" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1t" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -96,7 +96,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="nBws7KPpiq7JAIwQICmYL1LcsO/7hg9PlUEPFRkS2NGSGc2jf0p0c0JRR62ZRUw4vPCclkpswK0NnWpItzq1djfcDskpTro98//0nOW6EoHOHqWtC+MQkCCpftSQ/6f/" data-form-email="true">
+                    <input type="hidden" value="LM+0V2OenCzOVLBPJJIvhATw24lkV1WHgon9ml5IKQE9MvnTPmqSqLJq+f+O9IP6BJNPZM1gJvghzR4sR8C1BZgjJ9MNqvoT1eWdpDoikQltfAME47cYFZ9qqpo4d2Z1" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-11-email">Email<span class="form-asterisk">*</span></label>
