--- a/careers.html
+++ b/careers.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-25">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="content8-1d" data-bg-video="https://www.youtube.com/embed/F28NX_sKrvM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="content8-1d" data-bg-video="https://www.youtube.com/embed/F28NX_sKrvM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -134,7 +134,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ewFrxs/eFcvhptWcPs6iV3ZmZj5BP3bHTpQU1qaLwiE7r3up8W48tJvkCM50Hg/ACbDtpRfAOT9Ui1o3EUcomNVPgF40+gnEQAlrS/PpPjJe7T8ZI4QOr6lbLxHV+ONA" data-form-email="true">
+                    <input type="hidden" value="l7rMb/+44l6ysf4n4dWdshNMxDhSDHu44jhfu8hrgbyJhixlBwZKfzlZLHYKPyixvKoXGOf1iH6Gh1TEsM2dyTbjObm9MovfVfKPEECDcSa/HrAeb6KBlDF7N0UynO0v" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-k-email">Email<span class="form-asterisk">*</span></label>
