--- a/ccie_data_center.html
+++ b/ccie_data_center.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-4o">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="3JCI43koEcmWXjtxo5lBaA5crRtoEDfL6vqdTouEWyh737ZlXwd7ikrguBJYdaXEWiaHTPbXOxvDlVa0BRCPUwTGNJtzz2HV2mhaZkMtXmxYK1+UO8VO7lOmuFuvJ29v" data-form-email="true">
+                    <input type="hidden" value="gZQ+rbzO0QLIw+SkFj0Mei1ACveT9J+8kuXYF/tUaK6dg/tjVnawQj8kz7PaVbce7yrM32t2T9nW0R1wt00jsBTwaVjB61MWxCDKpm67dKORTSQ0TwJuyRUUhCwIp51g" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4u-email">Email<span class="form-asterisk">*</span></label>
