--- a/ccie_routing_and_switching.html
+++ b/ccie_routing_and_switching.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-3z">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-42" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-42" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="rq+SDMk6Hrqc6RjR9xQUvMGpC2s1LBG3rcfnndU9a089KXxuJ/HIoQdhjWi4BE53G0SZTqvguEDmKBuSa3ol1VpTClUSO8XmEzmuXePqLFbjnHn8o82QD2CClq1zZYY2" data-form-email="true">
+                    <input type="hidden" value="Yn9ZvrbeLyUPOyy7r8/CvGG+O8+BTHAPmmfdy8jBwZpyF5AnReeGTGM8TXCtcVj+EWpsNlXrYDaB1QG7bUFghIVRzuSZo8TkwsdFUmC1YVceZixjnTuNcF/UkSo5L2fa" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-40-email">Email<span class="form-asterisk">*</span></label>
