--- a/ccie_security.html
+++ b/ccie_security.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-4g">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4h" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4h" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="w0CLPce9ecfyIDprvJU4XCVrSfTANqK/7u4NMrdJFnO3XaDHet/NakJW7bCTE+kq3sI1kMu/+kKz+rMjMUFoslzKDYgKcPKQ+olb3tzfQyyfT+FmQNiy3f212BpoBoVi" data-form-email="true">
+                    <input type="hidden" value="dc30VXh8OQzra9XaymdnwM8ASB1IuIkhItZZU08gKbq/daCPErpajceMP95PibNoK+uDY90vUOdQET4QNPHxpSmEQFWGgv+qSp0Tt8G/XWYvBXdWO5h+ejex5lPnFxV5" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
