--- a/ccna_routing_and_switching.html
+++ b/ccna_routing_and_switching.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-2d">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2p" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="xxEI5nHXqj1f3CubBYf4yt9XzaavA6LXzwyye8ZQFs1v+c+8CUQmW0a2ity30B2YvxbMoqUv1TUHJVL4cwqsWdlBR42DYTEAqblnuVckCQP57DL0ccSfK9so2t1vsyXz" data-form-email="true">
+                    <input type="hidden" value="AV6Dg3FskBMxv6V03XwE3wHYFjKDC83h7XHnebUBUD15GTyNqC0vqSDk68MZhr+/U52uuRSScfz8nFN3c2WZERrIHcBFW/HgTmrBQqbpYFwFP6I4KGHsexkn5QA7LFZM" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2e-email">Email<span class="form-asterisk">*</span></label>
