--- a/ccnp_security.html
+++ b/ccnp_security.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-3j">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3m" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="c1AzjkBJEcfE74wmh/Ry4bmW66ZAl7VnjTuPwV+tf5IIehI+YDXrI4DYl+2dwe6w9ybvT0GP2BhnDuVZ9yQZTTdksJ+Bj6MMktFOzmdkwHQG35Dru2URThVQLIT7yOa4" data-form-email="true">
+                    <input type="hidden" value="rebjlTtd+zeYAb6DfDgHtM01xVxQ2J4uAhr6T+Amivp7zyzHMWW7CsP1sDSOHvmhs0Vnf+WeDXfL5ILdIt22MtGlIbsKQhJIPBx50VgK3kLHz2nrPYj2MmN88UTm0Mo9" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-3k-email">Email<span class="form-asterisk">*</span></label>
