--- a/cisco_certified_design_assosiate.html
+++ b/cisco_certified_design_assosiate.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-2j">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-34" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-34" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -171,7 +171,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="nIG0OvLa/V+sUkooX0B9Aa+Z4NSlN3MWpwSHrj6FE8lZEK7kiY5HKxuO3pN1CSRkyG0Oi4Zi6w6szee4wfp7XHcvLjIoCEt+P+nPAQzCHHqm7IXOkwSkNjamh68sk/jQ" data-form-email="true">
+                    <input type="hidden" value="b2y4ewUzka5fKl2EC1X1WwazLgEEXvmr+rNvB4s1xmeLuf8zSaaU1YfTvW6ARmisWpIPFZrVn/0lFOMJ5meHJBjbQ6n1ct49IVqtJezPR3iap0CmoSaeAtHIMfVU5f4z" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2k-email">Email<span class="form-asterisk">*</span></label>
