--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-66" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-66" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -149,7 +149,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="NHT2XyNV/TgFABC74LQMdVMejsxukF91LdK8Aq3HxdE8xe24CmXOETP/DLTSoEC971cPuNsZhJ4nlHpgMrMaPDvA24jAJ7eDEFFxWbnpSFdeqUOc97Jb+19PLLwA41gF" data-form-email="true">
+                    <input type="hidden" value="fanjgSahx3fwh4ocEeSJFblv+l6lAqsPT1nAtbfDaywhEa9Ras1eet61BrM5vsCmn7btO1fH+qFb/1gaGzv+m8TOonTbHCImkcX8J6RJagoX3QQ18ZxAPv6FQxMomVoW" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-a-email">Email<span class="form-asterisk">*</span></label>
