--- a/downloads.html
+++ b/downloads.html
@@ -27,7 +27,7 @@
 <body>
 <section id="ext_menu-60">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features2-64" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features2-64" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -134,7 +134,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ZRXADxazDoiWNqR6tG7+/aXtIagbDaLeHa4vAucqbFpKBQ6HGDY85sr9aE3LPg2q/rokJ3Tm6H6YzkRuW+yrUTpWzGkjwFYmstFQrAR8aRjUKqWbwt0+YucMjV+oELTA" data-form-email="true">
+                    <input type="hidden" value="E6s9fSYpXfo4lWZPutmoFv7Om0YUni/6aLSZv+N8ro+VWdrCi5sUnBXFmh/EkEnAtVhw0Vxgmva8YvSWjYneQmdwUZG0bRCrwmXinBbNMP6AvhEKLkk7Stp7TAYG+r+d" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-61-email">Email<span class="form-asterisk">*</span></label>
