--- a/exchange_server.html
+++ b/exchange_server.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-5l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-5o" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-5o" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -159,7 +159,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Qc+iYHNwtXAHg5VQbdY3z/yhAP72s+29uD1QfvVFu8jhmbQSaCvifaQEzahpfH29xGRAKHjyC16DPsa48UcGN9/7xR0B6IZRcuHV+MI85xoJ8bOtaMTigKAnBhNjoCrB" data-form-email="true">
+                    <input type="hidden" value="l4wdfSlISRuBRQNhdRbaG9JzphnrEbtrJDhlJcX3bReQWYzjt4eKGKeKIhU5NnZUEQvBiaYFJze4AleiScDlSAoCBXYo3yTnYu2wERVZHgqh1kKpvS/JNtC5PcXbqFPx" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-5m-email">Email<span class="form-asterisk">*</span></label>
