--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1y" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1y" style="background-image: url(assets/images/jumbotron.jpg);">
 
     
 
@@ -120,7 +120,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for your question. We'll get back to you.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="ASK A QUESTION">
-                        <input type="hidden" value="O8H26mCmHs11bZJzBzou3tfJAaIKIfAKMTukmQPRMh60fEwzS0vuEOrzuPFaw9VAIPcs5AFDALrc1v5T4LAZvR/VhXgtLMzFyROz9jV0WZtmkRR3GkkG7322yAC9gPzN" data-form-email="true">
+                        <input type="hidden" value="UrCJNi0SH/5na1fvnxfBb0dHazuqk0zvHi2XDEOfEyZObNm9FRpAy8sqM5q5HWDxj8HUhY+B2+QR11YMqfT27L0VU11d5p/gRcvOmq79AdCejt5zb22xYNQ3wTXiVcsW" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Question Here" id="form2-5t-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">ASK NOW</button></span>
@@ -152,7 +152,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="H7LUExE2t7M8cUGxLijewrjmiMXvsaRa/9fWBO1WVfkEZk/dJTHNXzv834NH1T2x3eQq2bYntFPvNBNHCpOV60CKiQP+h8I8TMzl8YnWNKEhsvxjmrO+S/FWVnqAgMiL" data-form-email="true">
+                    <input type="hidden" value="hGDuM7sb/v7kcgYMMV20zZ4o8uq3SyU1HXdeWeXVrFKkuosWc+nR3WzKlcKzw2cnSmkaqmH3o/gwEmavCJ5nMGeBZqAPXzXhaTXno+YH3eYjyB6tRJ/NZ/DJDMjyP6t+" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-16-email">Email<span class="form-asterisk">*</span></label>
