--- a/linux_courses.html
+++ b/linux_courses.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-70">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-71" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-71" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -138,7 +138,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="lp3ZifGGCmEYkW/1t+4ioAruBHDiPSiVln8OKZCC2LaJyvBYFamNpM3q+PFSBk/T1euU0ofi1yqP9unPgf2aMNC5brLSbZsO5u4bCrBnX6Gf6Az9EzOWjWHcOLnJq6VQ" data-form-email="true">
+                    <input type="hidden" value="u4tWQvdqu4Ln+0YD1Unmdu644BOY1RP96hYA+21OSvAMCLRlnE8n+Ze7sClSSlIgU0IigbK/VHRw3PNZOKpeFfh4RzCi6AVRdLJwZP9DxEZpgUFEtoprZBMxlTPtOzLV" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-72-email">Email<span class="form-asterisk">*</span></label>
