--- a/mcsa.html
+++ b/mcsa.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-59">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-5c" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-5c" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="iB8cufKwjofxuHPGKM0bjm/wSpHyuEi+Vjfl3A1iCYBos2x45XSCQ6YSdiaQD3bfUSdSx356e6GT0WrFURsYuTa18PC3J3oXaL/M+UV9OptIhiyG4uODiH/EvKIj/9lC" data-form-email="true">
+                    <input type="hidden" value="FDkQQetSLDd4TGELdazlC1Mj1tweVFzvf/GRnv2axhoz3rcKkXBxLKLXD+U5cot/JGctISqSgIEYQR4dlc0Axe16ED5wd5lXRG402kh/yR0vZWogQy2a4vnoLxLQp7KA" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-5a-email">Email<span class="form-asterisk">*</span></label>
