--- a/microsoft_courses.html
+++ b/microsoft_courses.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-4w">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-5z" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-5z" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -159,7 +159,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="fclnw/sf/vFqXRLHurEmLfY6k1KI8KbH2GAjlWMm7wivF2WMU7Z3MYwiJzxciCOPIAvHyiYyHPEy7lMcHWsNqueFj5iRCRsdXSD/bR0yQ9dZa+ElySN0tfYgUS32imKH" data-form-email="true">
+                    <input type="hidden" value="lEkghBd4jHi05aPDMexO9v8E2ewmwD1CTtuFGI8kR7P4k1QZGsO6R6jRSt/iSZ8dyb+DYslD/yunlSsY9HLgDGsE/WwJe1VtQvr94VGSmcWrZEs4JV5J0wqpY3K0eqCW" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4x-email">Email<span class="form-asterisk">*</span></label>
