--- a/network_admin_company.html
+++ b/network_admin_company.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-7x">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-81" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-81" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -117,7 +117,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="63Y7Itk0y3cXdVAAeRNbspaQxDMzkZ8UqihEfNxkW+HVD2u6YmyIeya5Fb6dUK5VDM7wPPQqk8Equjuh4v9ZWMLofXo+21wH/4w+lSW9Up/gXl9WAoG3n9WEtsgA1seg" data-form-email="true">
+                    <input type="hidden" value="C7C7Qn8LYF7Q60D/Vpmu3Xo4kVEhWQrbaJnzeTLU0SDIkTptlG/jc7mLMaIxXbWIAnZ4lOuRt/TYe7hIDcn1H8C05+jqLxBpibNBfLCvDt004J/2cesPPnRK6MHrhIaQ" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-7y-email">Email<span class="form-asterisk">*</span></label>
