--- a/rhce.html
+++ b/rhce.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-6p">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6q" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6q" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="yRRLxh5GTNAb8T3tu+djWxqoo5Y5CCsp0AG/9L9bQOsayEcWznwNQl2ikZC8KGdiGTUZiEHpF7Qnalq2y7QHPKnrZSrSQolvcHgPLDwNOfqlokxH51znokjzu6h8ayMs" data-form-email="true">
+                    <input type="hidden" value="w9ssta+4i71J+bgJ5WXHTXb45ft0NIqDudsnt1ZXQjBl+by7DG41wYRsunRzEnD9P+n3fUu50LYTrkq3Uv8M6Qp9qu3bBLUBXJj4U6d4jGRxCrlb1F5Nd6eo1/xg7VH5" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-6v-email">Email<span class="form-asterisk">*</span></label>
