--- a/rhcsa.html
+++ b/rhcsa.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-6h">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6i" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-6i" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="fpG22HgOaz8t71KMz3QB6Nc2Zxh8ap79F741fZcydAWovqwRr+oWVCxyI3LphdQ7fReriv9wQVmjJGwx910bGx9ROMRO22/Sl3mVz6pgZmKuOAS/R3xzDrYvV84JzOGL" data-form-email="true">
+                    <input type="hidden" value="wNh/TX7gXpoPq0K7eECLSDn++DHUkh82ugeYo7wa36aCRK5rvGlrDnmit6qv2pGbbE3WeNagtbNXYWI7F0892PM0p6tDHjYuGO4QPWaHIq+l5hnpcH7jp+Ohpsf5KbL0" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-6n-email">Email<span class="form-asterisk">*</span></label>
