--- a/software_downloads.html
+++ b/software_downloads.html
@@ -27,7 +27,7 @@
 <body>
 <section id="ext_menu-25">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-md-padding mbr-parallax-background mbr-after-navbar" id="social-buttons2-1g" style="background-image: url(assets/images/landscape3.jpg); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-md-padding mbr-parallax-background mbr-after-navbar" id="social-buttons2-1g" style="background-image: url(assets/images/landscape3.jpg); padding-top: 120px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -145,7 +145,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TcAkWHxU3fARIkRHRxub1x5HvA91MX0bjt7zsWl97VG5GIxqkyY9y83FFpvi8ZyWAHtE/1tI+089BYd9jRPDgcVk4L3g06KqPd66ete4bkvnzzMfleWNLMB16aHlS1ES" data-form-email="true">
+                    <input type="hidden" value="MbMeiGAtSaUG/pn1548qhnUr4uk/WH3SZdazSY/gAUZyeoKGMYel2I4YpZF3WluP9DvmYOC6WRdRwoaSfScFhkPqwl86FT8n2pjJut9kRkwwvwyVwAuuLODjHn9JP0pb" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-16-email">Email<span class="form-asterisk">*</span></label>
