--- a/tcne.html
+++ b/tcne.html
@@ -28,7 +28,7 @@
 <body>
 <section id="ext_menu-78">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -52,7 +52,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-79" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box3-79" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -175,7 +175,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="0mji+IMtksVUk/hOFB6UdHOMsPd3Nz2aA42MdHIlqPfMq3q++3oVLYkI+UlZEikM66ys4Q1F8G8j6JFrxewicBz35bVCefeywBTb3U5PVoIFAa1JBQQyRaxrbRY40DA5" data-form-email="true">
+                    <input type="hidden" value="b4HjfKn/uZlSh8YmRppfjGBhIWAScC5GRu5jy+axiyqmFSuoV/rdQJTNt5zAZo2gqdoZn8RDgzf5KZOIEaqrEu4QA+rR0jTewwvvGixzeO8sSMYnEGeIGMo7/LH4UQw2" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-7e-email">Email<span class="form-asterisk">*</span></label>
