--- a/tecacs_courses.html
+++ b/tecacs_courses.html
@@ -26,7 +26,7 @@
 <body>
 <section id="ext_menu-74">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-75" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table1-75" style="background-color: rgb(48, 48, 48); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -159,7 +159,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5Xxvpm9YvxLd0kGMZ7m/JbF/6kcuN27uwznADkb7aCQKTIDfKSjk6IhMaIPcwEys8GWw9+RDQyM3u6h5sSoJWwIXzHM+IX09l0YBOlqFh7BrMncmj3ASdga7iJHTt8Ev" data-form-email="true">
+                    <input type="hidden" value="UXx4ilrcuo/OViPMy2P6kRgU9yr5zHnqRq2ARUQrR/B0BLEiZDtKrRvNNLjN4xRm0BATeIBjnGmXwjFpUQ4XjNY9g3J75suyuABVlqYL34Zei7pSEfzGa8vtG4EMLhuW" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-76-email">Email<span class="form-asterisk">*</span></label>
