--- a/why_networking.html
+++ b/why_networking.html
@@ -27,7 +27,7 @@
 <body>
 <section id="ext_menu-1l">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -51,7 +51,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1m" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1m" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -136,7 +136,7 @@ Phone: +91 0484 4000 214<br>Mob: +91 97 464 73 302</p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="YyLh30XbipgvGb8zRAdfgMA8HNuArCIyLxJTRV/ZFc64vPPBoE3y3G8IKKt2BTwsd1R7Bo/w1jRF6RLuAYCnvV6at9bkP+9421Zf54gQQyv8hYkoYgP5I7NowA6l4S1s" data-form-email="true">
+                    <input type="hidden" value="s+hTJGgSFCNu6eewOi1sbeOdjk3No8rB8WH3bvUYDDtY+WSbENkDuTWDNGvZUSbRXs2ca0RgHUplHN22OLbffvWJQW7rS8XnuuNydTr96usHsdPFYF3Ensfw82fPOSf8" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-8-email">Email<span class="form-asterisk">*</span></label>
